<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>samurai</groupId>
    <artifactId>gui</artifactId>
    <packaging>jar</packaging>
    <version>3.0-SNAPSHOT</version>
    <name>Samurai</name>
    <url>http://samuraism.jp/samurai/</url>
    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <maven.compiler.source>11</maven.compiler.source>
        <maven.compiler.target>11</maven.compiler.target>
        <java.version>11</java.version>
        <!--        <jpackager.executable>${project.basedir}/jdk.packager/jpackager</jpackager.executable>-->
        <jpackager.icon>${project.basedir}/package/Shogun.icns</jpackager.icon>
    </properties>

    <licenses>
        <license>
            <name>Apache License 2.0</name>
            <url>http://www.apache.org/licenses/LICENSE-2.0</url>
            <distribution>repo</distribution>
        </license>
    </licenses>
    <dependencies>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-api</artifactId>
            <version>5.7.2</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-engine</artifactId>
            <version>5.7.2</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>samurai</groupId>
            <artifactId>core</artifactId>
            <version>3.0-SNAPSHOT</version>
        </dependency>
    </dependencies>
    <build>
        <defaultGoal>install</defaultGoal>
        <plugins>
            <plugin>
                <artifactId>maven-assembly-plugin</artifactId>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>single</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <descriptorRefs>
                        <descriptorRef>jar-with-dependencies</descriptorRef>
                    </descriptorRefs>
                    <archive>
                        <manifest>
                            <mainClass>samurai.swing.Samurai</mainClass>
                        </manifest>
                    </archive>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <encoding>UTF-8</encoding>
                    <source>11</source>
                    <target>11</target>
                    <compilerArgs>
                        <arg>--add-exports=jdk.internal.jvmstat/sun.jvmstat.monitor=ALL-UNNAMED</arg>
                    </compilerArgs>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-source-plugin</artifactId>
                <executions>
                    <execution>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <configuration>
                    <archive>
                        <manifest>
                            <mainClass>samurai.swing.Samurai</mainClass>
                        </manifest>
                    </archive>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>exec-maven-plugin</artifactId>
                <version>1.6.0</version>
                <executions>
                    <execution>
                        <id>create-package</id>
                        <phase>package</phase>
                        <goals>
                            <goal>exec</goal>
                        </goals>
                        <configuration>
                            <executable>jpackage</executable>
                            <workingDirectory>${project.build.directory}</workingDirectory>
                            <longModulepath>false</longModulepath>
                            <environmentVariables>
                                <JAVA_HOME>${java.home}</JAVA_HOME>
                            </environmentVariables>
                            <arguments>
                                <argument>--verbose</argument>
                                <argument>--java-options</argument>
                                <argument>-Xmx128m -Xms128m -XX:+UseSerialGC
                                    --add-exports=jdk.internal.jvmstat/sun.jvmstat.monitor=ALL-UNNAMED
                                    --add-exports=jdk.attach/sun.tools.attach=ALL-UNNAMED
                                    -XX:ErrorFile=$USER_HOME/java_error_in_idea_%p.log
                                    -XX:HeapDumpPath=$USER_HOME/java_error_in_idea.hprof
                                </argument>
                                <argument>--copyright</argument>
                                <argument>Yusuke Yamamoto</argument>
                                <argument>--vendor</argument>
                                <argument>Yusuke Yamamoto</argument>
                                <argument>--icon</argument>
                                <argument>${project.basedir}/package/samurai.icns</argument>
                                <argument>--input</argument>
                                <argument>${project.build.directory}/</argument>
                                <argument>--main-class</argument>
                                <argument>samurai.swing.Samurai</argument>
                                <argument>--main-jar</argument>
                                <argument>./${project.artifactId}-${project.version}.jar</argument>
                                <argument>--dest</argument>
                                <argument>./</argument>
                                <argument>--mac-package-identifier</argument>
                                <argument>samurai.swing.Samurai</argument>
                                <argument>--mac-signing-key-user-name</argument>
                                <argument>Yusuke Yamamoto (TX2Q55XRF7)</argument>
                                <argument>--mac-sign</argument>
                                <argument>--mac-entitlements</argument>
                                <argument>${project.basedir}/package/entitlement.plist</argument>
                                <argument>--name</argument>
                                <argument>Samurai</argument>
                                <argument>--add-modules</argument>
                                <argument>java.base,java.desktop,java.naming,jdk.internal.jvmstat,jdk.attach</argument>
                                <argument>--jlink-options</argument>
                                <argument>--strip-native-commands</argument>
                            </arguments>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>2.22.2</version>
            </plugin>
        </plugins>
    </build>
</project>
